--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -1,5 +1,11 @@
 <div class="span4 well">
- <table>
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Amount</th>
+    <th>Unit</th>
+    <th>Price</th>
+  </tr>
   <% @inventories.each do |inventory| %>
     <tr>
       <td><%= link_to inventory.name, @inventory %> </td>
