--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -5,8 +5,8 @@
       <%= f.text_field :title %>
     </div>
     <div class="control-group">
-      <%= f.label :content %>
-      <%= f.text_area :content %>
+      <%= f.label :email %>
+      <%= f.text_field :email %>
     </div>
     <%= f.submit "Submit", class: 'btn btn-success' %>
   <% end %>
