--- a/app/views/inventories/new.html.erb
+++ b/app/views/inventories/new.html.erb
@@ -11,14 +11,11 @@
   </tr>
   <% @inventories.each do |inventory| %>
     <tr>
-      <td><%= link_to inventory.name, @inventory %> </td>
+      <td><%= link_to inventory.name, inventory %> </td>
       <td><%= inventory.amount %> </td>
       <td><%= inventory.unit %> </td>
       <td><%= inventory.price %></td>
     </tr>
   <% end %>
   </table>
-</div>
-<div class="span4 well">
-<%= submit_tag "Email", :name => 'email_button' %>
 </div>
