--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -3,15 +3,15 @@
 </div>
 <div class="col-md-4">
   <%= pie_chart Request.group(:created_at).count %>
-    <p>Only <strong><%= link_to "Order", distributors_path %></strong> from the list of the items that you want. Learn from <strong><%= link_to "Past Orders", requests_path %></strong></p>
+    <p>Only <strong><%= link_to "Order", distributors_path %></strong> from the list of the items that you want. You can also see <strong><%= link_to "Past Orders", requests_path %></strong>.</p>
 </div>
 <div class="col-md-4">
   <%= pie_chart Distributor.group(:name).count %>
-  <p>Before head to the inventory, we also have <strong><%= link_to "Backouts", backouts_path %></strong> feature. To make sure you count them right.<p>
+  <p>No inventory is complete without <strong><%= link_to "Backouts", backouts_path %></strong>. Make sure you count them right.<p>
 </div>
 <div class="col-md-4">
   <%= bar_chart Inventory.group(:name).count %>
-  <p>Since you'll more than likely to have <strong><%= link_to "Inventories", new_inventory_path %></strong> at the end of the month, we though might as well include it here.</p>
+  <p>Nobody likes doing <strong><%= link_to "Inventories", new_inventory_path %></strong>, but someone has to do it.</p>
 </div>
 <div class="col-md-4">
   <%= bar_chart Post.group(:title).group(:created_at).count %>
