--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -6,7 +6,7 @@
     <p>Only <strong><%= link_to "Order", distributors_path %></strong> from the list of the items that you want. You can also see <strong><%= link_to "Past Orders", requests_path %></strong>.</p>
 </div>
 <div class="col-md-4">
-  <%= pie_chart Distributor.group(:name).count %>
+  <%= pie_chart Backout.group(:name).count %>
   <p>No inventory is complete without <strong><%= link_to "Backouts", backouts_path %></strong>. Make sure you count them right.<p>
 </div>
 <div class="col-md-4">
