--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -27,3 +27,42 @@
   <p>Add your <%= link_to "Products", new_good_path %></h4> here. You can view, edit or delete them too.</p>
 </div>
 
+<div class="col-md-6">
+  <script type="text/javascript">
+
+      // Load the Visualization API and the piechart package.
+      google.load('visualization', '1.0', {'packages':['corechart']});
+
+      // Set a callback to run when the Google Visualization API is loaded.
+      google.setOnLoadCallback(drawChart);
+
+      // Callback that creates and populates a data table,
+      // instantiates the pie chart, passes in the data and
+      // draws it.
+      function drawChart() {
+
+        // Create the data table.
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Styles');
+        data.addColumn('number', 'Amount');
+        data.addRows([
+          ['Bacon', 3],
+          ['Onions', 1],
+          ['Olives', 1],
+          ['Tuna', 1],
+          ['Pepperoni', 2]
+        ]);
+
+        // Set chart options
+        var options = {'title':'This is just a demo using Google Chart',
+                       'width':700,
+                       'height':700};
+
+        // Instantiate and draw our chart, passing in some options.
+        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
+    </script>
+<div id="chart_div"></div>
+</div>
+
