--- a/app/views/backouts/show.html.erb
+++ b/app/views/backouts/show.html.erb
@@ -47,6 +47,41 @@
   <tr>
 </table>
 </div>
-<div class="col-md-8">
-  <%= bar_chart Backout.group(:item1).count %>
+<div class="col-md-6">
+  <script type="text/javascript">
+
+      // Load the Visualization API and the piechart package.
+      google.load('visualization', '1.0', {'packages':['corechart']});
+
+      // Set a callback to run when the Google Visualization API is loaded.
+      google.setOnLoadCallback(drawChart);
+
+      // Callback that creates and populates a data table,
+      // instantiates the pie chart, passes in the data and
+      // draws it.
+      function drawChart() {
+
+        // Create the data table.
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Items');
+        data.addColumn('number', 'Amount');
+        data.addRows([
+          ['Rice', 35],
+          ['Avocado', 3],
+          ['Cucumber', 5],
+          ['Scallions', 2],
+          ['Jalapeno', 1]
+        ]);
+
+        // Set chart options
+        var options = {'title':'Backouts November 2014 (in lbs)',
+                       'width':500,
+                       'height':300};
+
+        // Instantiate and draw our chart, passing in some options.
+        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
+    </script>
+  <div id="chart_div"></div>
 </div>
