--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -6,8 +6,8 @@
      <%= f.text_field :name %>
   </div>
   <div class="control-group">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.label :distributor_id %><br />
+    <%= f.collection_select :distributor_id, Distributor.all, :id, :email, include_blank: true %>
   </div>
   <br/>
   <div class="control-group">
