--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,6 +11,10 @@
     <div>
      <%= f.file_field :image %>
     </div>
+    <div>
+     <%= f.label :remote_image_url, "or image URL" %>
+     <%= f.text_field :remote_image_url %>
+    </div>
     <%= f.submit "Submit", class: 'btn btn-success' %>
   <% end %>
 </div>
