--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,7 @@
 <div class="span5 well">
   <h4><%= @post.title %></h4>
   <%= @post.content %>
+  <%= image_tag @post.image_url.to_s %>
   <br/>
   <%= link_to 'Edit', edit_post_path(@post) %>
   <%= link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
