--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html>
   <head>
     <title>//paprthin - quick look and make decision</title>
       <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
@@ -9,8 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
       <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
       <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-      <%= javascript_include_tag "//www.google.com/jsapi" %>
-      <%= javascript_include_tag "jquery-1.4.2.min", "rails", "highcharts" %>
+
   </head>
   <body>
     <div id="sticky">
