--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -5,6 +5,10 @@
       <%= f.text_field :title %>
     </div>
     <div class="control-group">
+      <%= f.label :content %>
+      <%= f.text_area :content %>
+    </div>
+    <div class="control-group">
       <%= f.label :email %>
       <%= f.text_field :email %>
     </div>
