--- a/app/views/backouts/_form.html.erb
+++ b/app/views/backouts/_form.html.erb
@@ -56,6 +56,12 @@
           <%= f.text_field :item4 %>
          </div>
       </td>
+      <td>
+        <div class="control-group">
+          <%= f.label :amount4 %>
+          <%= f.text_field :amount4 %>
+        </div>
+       </td>
     </tr>
     <tr>
       <td>
