--- a/app/views/backouts/show.html.erb
+++ b/app/views/backouts/show.html.erb
@@ -66,15 +66,15 @@
         data.addColumn('string', 'Items');
         data.addColumn('number', 'Amount');
         data.addRows([
-          ['Rice', 35],
+          ['Rice', 21],
           ['Avocado', 3],
           ['Cucumber', 5],
-          ['Scallions', 2],
-          ['Jalapeno', 1]
+          ['Yellowtail', 1],
+          ['Blackened Tuna', 2]
         ]);
 
         // Set chart options
-        var options = {'title':'Backouts November 2014 (in lbs)',
+        var options = {'title':'Backouts December 2014 (in lbs)',
                        'width':500,
                        'height':300};
 
