--- a/app/views/app_mailer/send_report.html.erb
+++ b/app/views/app_mailer/send_report.html.erb
@@ -1,7 +1,9 @@
 <div class="span5 well">
   <h4>Megan,</h4>
-  <p>Below are the links of last month's inventories and backouts. Let me know if this works for you, or if you prefer the paper version.</p>
+  <p>Here are the links of last month's inventories and backouts. Thank you.</p>
   <em><h4><a href="paperthincut.herokuapp.com/inventories">Click here for inventories</h4></em>
   <br/>
   <em><h4><a href="paperthincut.herokuapp.com/backouts">Click here for backouts</h4></em>
+  <br/>
+  <h4>Marvin "daddy" Nikijuluw</h4>
 </div>
