--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -61,4 +61,6 @@
   <%= column_chart Good.group(:name).count %>
   <p>Add your <%= link_to "Products", new_good_path %></h4> here. You can view, edit or delete them too.</p>
 </div>
+<hr>
+<center><i class="fa fa-github"></i></center>
 
