--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -62,5 +62,6 @@
   <p>Add your <%= link_to "Products", new_good_path %></h4> here. You can view, edit or delete them too.</p>
 </div>
 <hr>
-<center><i class="fa fa-github"></i></center>
+
+<center><i class="fa fa-pie-chart big"></i></center>
 
