--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,8 @@
 <div class="col-md-6">
   <h3>Messages</h3>
-  <em><h5><%= link_to "New ", new_post_path %></h5></em>
+  <% if logged_in? %>
+    <em><h5><%= link_to "New ", new_post_path %></h5></em>
+  <% end %>
   <br/>
   <% @posts.each do |post| %>
     <div class="col-md-6">
