--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,8 @@
   <%= @post.content %>
   <%= image_tag @post.image_url.to_s %>
   <br/>
-  <%= link_to 'Edit', edit_post_path(@post) %>
-  <%= link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <% if logged_in? %>
+    <%= link_to 'Edit', edit_post_path(@post) %>
+    <%= link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <% end %>
 </div>
