--- a/app/views/app_mailer/send_report.html.erb
+++ b/app/views/app_mailer/send_report.html.erb
@@ -5,5 +5,5 @@
   <br/>
   <em><h4><a href="paperthincut.herokuapp.com/backouts">Click here for backouts</h4></em>
   <br/>
-  <h4>Marvin "daddy" Nikijuluw</h4>
+  <h4>daddy</h4>
 </div>
