--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,8 @@
     <li><%= link_to user.username, user %></li>
   <% end %>
 </div>
-<div class="span3 well">
-  <h4><%= link_to "Add new user", new_user_path %></h4>
-</div>
+<% if logged_in? %>
+  <div class="span3 well">
+    <h4><%= link_to "Add new user", new_user_path %></h4>
+  </div>
+<% end %>
