--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,9 @@
     <li><%= @user.username %></li>
     <li><%= @user.email %></li>
     <br/>
-    <li><%= link_to "Edit", edit_user_path %></li>
-    <li><%= link_to 'Delete', @user, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+    <% if logged_in? %>
+      <li><%= link_to "Edit", edit_user_path %></li>
+      <li><%= link_to 'Delete', @user, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+    <% end %>
   <ul>
 </div>
