--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,7 +41,7 @@ th {
 }
 
 input[type=checkbox] {
-    display: inline;
+    display: block-inline;
     margin-left: 0.5em;
     margin-right: 2em;
     line-height: 1em;
