--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-  <center><h3><strong>"//paprthin</strong>.<em>order. backout.inventory."</em><h3></center>
+  <center><h3><strong>"//paprthin</strong>.<em>order. backout.inventory.and....drama"</em><h3></center>
 </div>
 <hr>
 <div class="col-md-6">
