--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -24,13 +24,16 @@
   <p>See how many <strong><%= link_to "Users", users_path %></strong> have access to your app and their identities.</p>
 </div>
 
-<div class="col-md-3">
+<div class="col-md-4">
   <%= column_chart Good.group(:name).count %>
   <p>Add your <%= link_to "Products", new_good_path %></h4> here. You can view, edit or delete them too.</p>
 </div>
-<div class="col-md-3">
+<div class="col-md-4">
   <%= column_chart Log.group(:event).count %>
   <p>Important events that you need to <%= link_to "Log", logs_path %></h4> ? You can add and review them here for future imporvements around the restaurant.</p>
 </div>
-
+<div class="col-md-4">
+  <%= column_chart Appointment.group(:chef).count %>
+  <p>Give your costumers personal experience. Make sure you're working when they are visiting <%= link_to "Appointment", appointments_path %></h4></p>
+</div>
 
