--- a/app/views/goods/_form.html.erb
+++ b/app/views/goods/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <br/>
   <div class="control-group">
-    <%= f.label "Distributors:" %>
+    <li>Select <%= f.label "Distributors:" %></li>
     <%= f.collection_check_boxes :distributor_ids, Distributor.all, :id, :name do |cb| %>
       <% cb.label(class: "checkbox inline") {cb.check_box(class: "checkbox") + cb.text} %>
     <% end %>
