--- a/app/views/backouts/show.html.erb
+++ b/app/views/backouts/show.html.erb
@@ -1,5 +1,11 @@
 <div class="span5 well">
  <h4><%= @backout.month %></h4>
+  <%= form_for [@backout, @respond] do |f| %>
+   <div class="control-group">
+    <%= f.label :body %>
+    <%= f.text_area :body %>
+   </div>
+  <% end %>
  <p>Most of these items were thrown away because they were over prepped / spoiled</p>
  <% if logged_in? %>
    <em><%= link_to 'Delete', backout_path, method: :delete, data: { confirm: 'Are you sure?' } %></em>
