--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
           <div class="row">
             <ul class="pull-left">
               <li>
-              <%= link_to "//paprthin", root_path, :class => 'brand' %>
+              <%= link_to "//paprthin", root_path %>
               </li>
             </ul>
             <ul class="pull-right">
