--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -1,5 +1,7 @@
 <div class="span5 well">
-<table>
+<h3 style="text-align:center;">February 2015</h3>
+<hr>
+<table >
   <tr>
     <th>Name</th>
     <th>Amount</th>
