--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -63,8 +63,7 @@ form input[type='text'] {
   padding-right: 25px;
   padding-top: 75px;
   margin-bottom: 75px;
-  display:inline-block;
-  float: left;
+  margin-top: 20px;
  }
 
  li {
