--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
             </ul>
             <ul class="pull-right">
               <% if logged_in? %>
+              <%= link_to "Products", new_good_path %>
               <%= link_to "sign Out", logout_path %>
               <% else %>
               <%= link_to "sign in", login_path  %>
