--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -2,12 +2,12 @@
   <center><h3><strong>order.backout.inventory</strong><h3></center>
 </div>
 <hr>
-<div class="col-md-6">
+<div class="col-md-4">
   <%= pie_chart Request.group(:created_at).count %>
     <p>Only <strong><%= link_to "Order", distributors_path %></strong> from the list of the items that you want. You can also see <strong><%= link_to "Past Orders", requests_path %></strong>.</p>
 </div>
 <hr>
-<div class="col-md-6">
+<div class="col-md-4">
   <%= pie_chart Backout.group(:month).count %>
   <p>No inventory is complete without <strong><%= link_to "Backouts", backouts_path %></strong>. Make sure you count them right.<p>
 </div>
@@ -20,20 +20,8 @@
   <p>Send in your <strong><%= link_to "Reports", posts_path %></h4></strong> here.</p>
 </div>
 <div class="col-md-4">
-  <%= pie_chart User.group(:username).count %>
-  <p>See how many <strong><%= link_to "Users", users_path %></strong> have access to your app and their identities.</p>
+  <%= pie_chart Log.group(:name).count %>
+  <p>Important events that you need to <%= link_to "Log", logs_path %></h4> ? You can add and review them here for future imporvements.</p>
 </div>
 
-<div class="col-md-4">
-  <%= column_chart Good.group(:name).count %>
-  <p>Add your <%= link_to "Products", new_good_path %></h4> here. You can view, edit or delete them too.</p>
-</div>
-<div class="col-md-4">
-  <%= pie_chart Log.group(:name).count %>
-  <p>Important events that you need to <%= link_to "Log", logs_path %></h4> ? You can add and review them here for future imporvements around the restaurant.</p>
-</div>
-<div class="col-md-4">
-  <%= column_chart Calendar.group(:month).count %>
-  <p>Give your costumers personal experience. Make sure you're working when they are visiting <%= link_to "Calendars", new_calendar_path %></h4></p>
-</div>
 
