--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -12,7 +12,7 @@
   </tr>
 <% @inventories.each do |inventory| %>
     <tr>
-      <td><%= link_to inventory.name, @inventory %> </td>
+      <td><%= link_to inventory.name, inventory %> </td>
       <td><%= inventory.amount %> </td>
       <td><%= inventory.unit %> </td>
       <td><%= inventory.price %></td>
