--- a/app/views/inventories/show.html.erb
+++ b/app/views/inventories/show.html.erb
@@ -1,4 +1,4 @@
-<div class="span4 well">
+<div class="col-md-5">
   <h4><li><%= link_to @inventory.name, edit_inventory_path %></li></h4>
   <em><%= link_to 'Delete', inventory_path, method: :delete, data: { confirm: 'Are you sure?' } %></em>
 </div>
